nextcloud/mysql-nextcloud-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-allow-egress-backend-to-mysql-nextcloud
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud
      tier: backend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mysql-nextcloud
              tier: mysql
      ports:
        - protocol: TCP
          port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-allow-ingress-to-mysql-nextcloud-from-backend
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: mysql-nextcloud
      tier: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nextcloud
              tier: backend
      ports:
        - protocol: TCP
          port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-allow-ingress-to-mysql-nextcloud-sidecar-from-monitoring
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: mysql-nextcloud
      tier: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9104
